--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,18 +1,33 @@
-<!--
-  Generated template for the Login page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
 <ion-content padding>
+  
+  <ion-list>
+    <ion-item>
+      <ion-label color="primary" floating>Email</ion-label>
+      <ion-input [(ngModel)]="email" type="email"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label color="primary" floating>Password</ion-label>
+      <ion-input [(ngModel)]="password" type="password"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <br/>
+
+  <button ion-button (click)="onLogin()">
+    Login
+  </button>
+
+  <button ion-button outline (click)="onGetInfo()">
+    Get Info
+  </button>
 
 </ion-content>
