--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,11 +7,9 @@
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    This project is a sample app built to test security in mobile/web applications.
   </p>
   <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    How to build, design and test the security of web applications and web services.
   </p>
 </ion-content>
